--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #00162E;
-    --fundo-senha: #00244D;
-    --fundo-texto: #001E40;
-    --borda: #0075FF;
+    --cor-de-fundo:rgb(69, 3, 56);
+    --fundo-senha: #11c6a5;
+    --fundo-texto: hwb(177 4% 16%);
+    --borda: #ef1518;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
