--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 :root {
     --branco: white;
     --cor-de-fundo:rgb(4, 148, 40);
-    --fundo-senha: #c611b7;
-    --fundo-texto: hwb(287 10% 5%);
+    --fundo-senha: hsl(215, 94%, 26%);
+    --fundo-texto: hwb(240 4% 39%);
     --borda: #f0eded;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
